--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
   <title>Sofia Kruse Robertson - Portfolio</title>
   <style>
     body {
-      font-family: Arial, sans-serif;
+      font-family: 'Georgia', serif;
       margin: 0;
       padding: 0;
-      background-color: #f4f4f4;
+      background-color: #f5e6cc; /* Tan background color */
     }
 
     header {
-      background-color: #333;
+      background-color: #7f5f1a; /* Dark tan for header */
       color: #fff;
       text-align: center;
       padding: 1em;
@@ -31,11 +31,11 @@
     }
 
     h2 {
-      color: #333;
+      color: #7f5f1a; /* Dark tan for headings */
     }
 
     h3 {
-      color: #555;
+      color: #996633; /* Lighter tan for subheadings */
     }
 
     ul {
@@ -48,7 +48,7 @@
     }
 
     a {
-      color: #007BFF;
+      color: #003366; /* Dark blue for links */
       text-decoration: none;
     }
 
@@ -57,7 +57,7 @@
     }
 
     footer {
-      background-color: #333;
+      background-color: #7f5f1a;
       color: #fff;
       text-align: center;
       padding: 1em;
@@ -132,3 +132,4 @@
 </body>
 
 </html>
+
